pkg/lang/testdata/ub/calls/valid/set-skips.ub
inputs: { a: { type: set(string) } }
