pkg/lang/testdata/ub/calls/invalid/type-attr-resource.ub
resources: { core.thing.it: { type: pick() } }
